add route register
