# routes/authRoute.js
@@ -4,5 +4,6 @@ const AuthController = require('../controllers/authController');
 
 // Route đăng nhập
 router.post('/login', AuthController.login);
+router.post('/register', AuthController.register);
 
 module.exports = router;
